--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,14 @@
       "src": "index.js",
       "use": "@vercel/node"
     }
-  ]
+  ],
+   "routes": [
+    {
+      "src": "/api/libros",  // Ruta de la URL
+      "dest": "index.js"  // Ruta al archivo principal de tu aplicación
+    }
+  ],
+  "env": {
+    "MONGODB_URI": "mongodb+srv://yaalexa25:nma02120@cluster0.48osn5a.mongodb.net/dblibro"  // Variable de entorno para la cadena de conexión a MongoDB
+  }
 }
