--- a/vercel.json
+++ b/vercel.json
@@ -8,11 +8,11 @@
   ],
    "routes": [
     {
-      "src": "/api/libros",  // Ruta de la URL
-      "dest": "index.js"  // Ruta al archivo principal de tu aplicación
-    }
+      "src": "/api/libros",  
+      "dest": "index.js" 
+    } 
   ],
   "env": {
-    "MONGODB_URI": "mongodb+srv://yaalexa25:nma02120@cluster0.48osn5a.mongodb.net/dblibro"  // Variable de entorno para la cadena de conexión a MongoDB
+    "MONGODB_URI": "mongodb+srv://yaalexa25:nma02120@cluster0.48osn5a.mongodb.net/dblibro" 
   }
 }
