--- a/vercel.json
+++ b/vercel.json
@@ -10,6 +10,10 @@
     {
       "src": "/api/libros/:id",  
       "dest": "index.js" 
+    },
+    {
+      "src": "/api/libros",  
+      "dest": "index.js" 
     } 
   ],
   "env": {
